tests/graphql_tests/snapshots/graphql_test__graphql_tests__user_test__ユーザと紐づく投稿をレスポンスすること.snap
---
source: tests/graphql_tests/user_test.rs
assertion_line: 47
expression: "graphql_req(&app, req_body).await"

---
{
  "data": {
    "user": {
      "id": 1,
      "name": "Aron",
      "posts": [
        {
          "id": 1,
          "title": "Aron - post#1"
        },
        {
          "id": 2,
          "title": "Aron - post#2"
        }
      ]
    }
  }
}
